--- a/dashboardBlande.html
+++ b/dashboardBlande.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="{{ str_replace('_', '-', app()->getLocale()) }}">
+<!--<html lang="{{ str_replace('_', '-', app()->getLocale()) }}">-->
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
         <link rel="icon" href="imagenes/logoLink.png">
         <title>Link @yield('titulo')</title>
-        @livewireStyles
+       <!-- @livewireStyles-->
     </head>
     <body>
         <!--Navbar inicial-->
@@ -203,4 +203,3 @@
         </main>    
     </body>
 </html>
-@endsection
